Update map_cloud_dir path by removing leading slash

--- a/config/lio_3d_config.yaml
+++ b/config/lio_3d_config.yaml
@@ -2,7 +2,7 @@ lio_3d_node:
   ros__parameters:
     lidar_type: "livox"
     use_as_localizer: false
-    map_cloud_dir: "/tmp/pslam_data/"
+    map_cloud_dir: "tmp/pslam_data/"
     param_files_dir: "" # LIO parameters must be located under plain_slam_ros2/config/
 
     pointcloud_topic: "livox/lidar"
